package SmartHome.vo;

public interface ValueObject {

}
